test/expected/cli/command_edge_case_behavior.out
== bare wait returns 0, not the last job status:
rc=0
== declare -x exports an already-set variable:
x=hello
== an unquoted heredoc leaves a dollar-single-quote literal:
$'\n'
== pkill rejects an empty pattern:
shit: 1:1: error: pkill requires a non-empty pattern.
     1 |  shitbox pkill ""
       |  ^~~~~~~~~~~~~~~~ here.
note: Pass a pattern, e.g. `pkill ssh`.
== cp -r of a directory into itself is refused, not infinite:
shit: 1:1: error: cp: cannot copy 'sub' into itself.
     1 |  shitbox cp -r sub sub
       |  ^~~~~~~~~~~~~~~~~~~~~ here.
note: The destination is inside the source directory.
== rm removes a dangling symlink:
rc=0
ls: cannot access 'link': No such file or directory
